tests/miniJava/neg/000085_mutation.MiniJava
class java { public class java { } void Main ( String [ ] java ) { { } } }
